--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "plyr": "^3.4.3",
+    "query-string": "^6.2.0",
     "vue": "^2.5.17",
     "vue-plyr": "^4.0.0",
     "vuex": "^3.0.1"
